added small icons for navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -350,3 +350,13 @@ input[type="button"], input[type="reset"], input[type="submit"] {
   height: 535px; 
   width: 490px;
 }
+
+
+
+/*  style globe and book navbar icons */
+#style-navbar-icons {
+  font-size: 18px;
+  color: red;
+}
+
+
