--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,8 +44,12 @@
             <img src=<%= current_user.picture_url %> alt="" height="20" width="20"> <%= current_user.first_name %></a></li>
           <% end %> 
           <li><%=link_to "Home", events_index_path %></li>
-          <li><a href="/books/"><span class="glyphicon glyphicon-globe"></span> Books</a></li>
-          <li><a href="/books/new"><span class="glyphicon glyphicon-book"></span> Post A Book</a></li>
+          <li id="style-navbar-icons"><a href="/books/">
+          
+          <img src="/assets/books2.png" alt="" height="26" width="28"></a></li>
+
+
+          <li id="style-navbar-icons"><a href="/books/new"><img src="/assets/addbook.png" alt="" height="26" width="26"></a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
             <ul class="dropdown-menu">
