small display of future messaging system

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,10 @@
           
           <img src="/assets/books2.png" alt="" height="23" width="28"></a></li>
 
+          <!-- messages system modal  -->
+          <li id="style-navbar-icons" data-toggle="modal" data-target="#myModal"><a href="#">
+          <img src="/assets/messages.png" alt="" height="23" width="28"><span class="badge" style="background: red;">3</span></a></li>
+
 
           <li id="style-navbar-icons"><a href="/books/new"><img src="/assets/addbook.png" alt="" height="23" width="26"> </a></li> 
           <li class="dropdown">
@@ -111,5 +115,24 @@
       </footer>
     <% end %>
 </div>
+
+
+  <!-- this is just in the mean time I work on messages system -->
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <br>
+        <h1>MESSAGES</h1>
+        <h2>this feature still in production! </h2>
+        <h2>coming soon!</h2>
+        <br>
+      </div>
+    </div>
+  </div>
+
+
 </body>
 </html>
