--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -153,7 +153,7 @@
                   <div class="col-lg-10 small-containers" id="reviews-container">
                     <br>
                     <p>From:
-                    <a href="/users/<%= @users.find(event.user_id).id %>" style=" font-size: 18px; font-family: inherit; color: #3b5998; font-weight: bold;">
+                    <a href="/users/<%= User.where(id: Request.where(id: event.request_id)[0].owner_id)[0].id %>" style=" font-size: 18px; font-family: inherit; color: #3b5998; font-weight: bold;">
                     <%= User.where(id: Request.where(id: event.request_id)[0].owner_id)[0].first_name %> <%= User.where(id: Request.where(id: event.request_id)[0].owner_id)[0].last_name %></a>'s list.</p>
                     <p>Good luck in your request!</p>
                   </div>
@@ -200,7 +200,7 @@
                   <div class="col-lg-10 small-containers" id="reviews-container">
                     <br>
                     <p>To: 
-                    <a href="/users/<%= @users.find(event.user_id).id %>" style=" font-size: 18px; font-family: inherit; color: #3b5998; font-weight: bold;">
+                    <a href="/users/<%= User.where(id: Lend.where(id: event.lend_id)[0].borrower_id)[0].id %>" style=" font-size: 18px; font-family: inherit; color: #3b5998; font-weight: bold;">
                     <%= User.where(id: Lend.where(id: event.lend_id)[0].borrower_id)[0].first_name %> <%= User.where(id: Lend.where(id: event.lend_id)[0].borrower_id)[0].last_name %></a></p>
                     <p>Congrats!</p>
                     
