--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,6 +54,11 @@
 
 
           <li id="style-navbar-icons"><a href="/books/new"><img src="/assets/addbook.png" alt="" height="23" width="26"> </a></li> 
+
+          <% if current_user.admin == true %>
+            <li><%=link_to "Admin", rails_admin_path %></li>
+          <% end %>
+
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="caret"></span></a>
             <ul class="dropdown-menu">
