--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,9 +48,29 @@
           
           <img src="/assets/books2.png" alt="" height="23" width="28"></a></li>
 
-          <!-- messages system modal  -->
-          <li id="style-navbar-icons" data-toggle="modal" data-target="#myModal"><a href="#">
-          <img src="/assets/messages.png" alt="" height="23" width="24"><span class="badge" style="background: red;">3</span></a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img src="/assets/messages.png" alt="" height="23" width="24"><span class="badge" style="background: red;">3</span></a></a>
+            <ul class="dropdown-menu">
+
+              <% User.all.each do |user| %>
+                <div class="chat-navbar">
+                    <a href="/users/<%= user.id %>" >
+                      <% if Imageprofile.where(user_id: user.id )[0] != nil && Imageprofile.where(user_id: user.id )[0].profile_image != nil %>
+                        <div class="small-profile-image-paperclip-home-page">
+                          <li><%= image_tag @imageprofile.where(user_id: user.id)[0].profile_image %> <a href="/users/<%= user.id %>"><%= user.first_name %> <%= user.last_name%></a></li>
+                        </div>
+                      <% else %>
+                        <li><img src=<%= user.picture_url %> alt="" height="20" width="20"> <a href="/users/<%= user.id %>"><%= user.first_name %> <%= user.last_name%></a></li>
+                      <% end %>
+                    </a>
+                </div>
+              <% end %>
+            </ul>
+          </li>
+
+
+ 
+
 
 
           <li id="style-navbar-icons"><a href="/books/new"><img src="/assets/addbook.png" alt="" height="23" width="26"> </a></li> 
@@ -67,9 +87,9 @@
 
               
               <li><%= link_to 'Edit Images', edit_imageprofile_path(Imageprofile.where(user_id: current_user.id )[0]) %></li>
-          <% else %>
+            <% else %>
               <li><%= link_to "Upload Images", new_imageprofile_path %></li>
-          <% end %>
+            <% end %>
 
 
 
@@ -120,24 +140,6 @@
       </footer>
     <% end %>
 </div>
-
-
-  <!-- this is just in the mean time I work on messages system -->
-  <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
-    <div class="modal-dialog">
-    
-      <!-- Modal content-->
-      <div class="modal-content">
-        <br>
-        <h1>MESSAGES</h1>
-        <h2>this feature still in production! </h2>
-        <h2>coming soon!</h2>
-        <br>
-      </div>
-    </div>
-  </div>
-
 
 </body>
 </html>
