--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -360,3 +360,203 @@ input[type="button"], input[type="reset"], input[type="submit"] {
 }
 
 
+
+// Phone devises 
+@media only screen 
+  and (min-device-width: 300px) 
+  and (max-device-width: 736px) { 
+      .no-sing-in-navbar {
+          position: relative;
+          min-height: 50px;
+          margin-bottom: 0px;
+          border: 1px solid transparent;
+          background-image: linear-gradient(#4E69A2, #3B5998);
+          border-color: #44609D;
+      }        
+}
+
+// @media screen 
+//   and (min-width: 300px) 
+//   and (max-width: 736px) { 
+//       .no-sing-in-navbar {
+//           position: relative;
+//           min-height: 50px;
+//           margin-bottom: 0px;
+//           border: 1px solid transparent;
+//           background-image: linear-gradient(red, white);
+//       }        
+// }
+
+
+
+// @media screen and (max-width: 600px) {
+//     .no-sing-in-navbar {
+//         position: relative;
+//         min-height: 50px;
+//         margin-bottom: 0px;
+//         border: 1px solid transparent;
+//         background-image: linear-gradient(red, white);
+//     }
+// }
+
+
+// tablet devises
+@media only screen 
+  and (min-device-width: 737px) 
+  and (max-device-width: 1025px) {
+
+// this is the log in page
+    .no-sing-in-navbar {
+        position: relative;
+        min-height: 50px;
+        margin-bottom: 0px;
+        border: 1px solid transparent;
+        background-image: linear-gradient(#4E69A2, #3B5998);
+        border-color: #44609D;
+    }
+
+    .footer-container {
+        padding: 0;
+
+        footer {
+          li {
+            display: inline-block;
+          }
+        }
+    }
+
+    .log-in-form {
+        .row {
+          display: inline-flex;
+        }
+        .container-landing-page {
+            height: 831px;
+            
+            .container, .col-lg-12 {
+                margin-right: 0;
+                margin-left: 0;
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+    }    
+
+    .sing-up-page {
+        .left-side-sign-up-page {
+            width: 50%;
+        }
+
+        .col-lg-4 {
+            position: relative;
+            top: -429px;
+            left: 500px;
+            width: 47%;
+        }
+
+        .sing-up-button {
+            margin-top: -22%;
+        }
+    } 
+
+// this is the home page for the application.
+    .navbar-collapse {
+        .navbar-right {
+            float: right !important;
+            margin-right: -90px;
+        }
+    }
+
+    .general-container {
+      padding: 0;
+          .col-lg-12, 
+          .col-lg-7, 
+          .col-lg-3,
+          .col-lg-2 {
+              padding: 0;
+
+          }
+          .advertisement {
+              width: 30%;
+              position: fixed;
+              float: right;
+              top: 103px;
+              right: 2px;
+              padding-right: 10px;
+          }
+          .col-lg-7 {
+              width: 68%;
+              padding-top: 40px;
+          }
+          .col-lg-2 {
+              display: none;
+          }
+
+          .book-image-container {
+              position: absolute;
+              right: 25px;
+          }
+    }
+
+
+// this is the profile page
+
+  .images-profile-container {
+
+      .wall-picture-container {
+          img {
+              max-width: 100%;
+              max-height: 100%;
+              margin-left: -20px;
+          }
+      }
+      .profile-pic-container {
+          height: auto;
+          width: auto;
+          position: absolute !important;
+          top: 27% !important;
+          left: 10%;
+      }
+      .profile-name {
+          position: absolute;
+          left: 105%;
+          top: 61%;
+      }
+  }
+  
+  // new book page
+
+  .new-book {
+      .col-lg-4 {
+          width: 45%;
+      }
+      .new-book-info {
+          width: 55%;
+          top: -422px;
+          left: 433px; 
+      }
+
+  }
+
+
+  
+
+
+
+}
+
+
+
+
+// @media screen 
+//   and (min-width: 737px) 
+//   and (max-width: 1024px) {
+//     .no-sing-in-navbar {
+//         position: relative;
+//         min-height: 50px;
+//         margin-bottom: 0px;
+//         border: 1px solid transparent;
+//         background-image: linear-gradient(black, white);
+//     }
+// }
+
+
