--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container new-book">
   <div class="col-lg-12">
     <h1>New Book</h1>
 
@@ -23,7 +23,7 @@
       </div>
     </div>
     
-    <div class="col-lg-8">
+    <div class="col-lg-8 new-book-info">
       <%= render 'form' %>
     </div>
   </div>  
