--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,33 +1,35 @@
 <div class="container">
   <div class="images-profile-container">
-    <div class="wall-picture-container">
-    <!-- Displays wall images depending if uploaded images or not -->
-      <% if Imageprofile.where(user_id: @user.id )[0] != nil && Imageprofile.where(user_id: @user.id )[0].wall_image != nil %>
-        <div class="wall-image-paperclip">
-          <%= image_tag @imageprofile.wall_image %>
-        </div>
-      <% else %>
-        <img src="/assets/image_profile.jpg" alt="" height="410" width="1075">
-      <% end %>
-    </div>
-    <div class="profile-pic-container">
-    <!-- Displays profile images depending if uploaded images or not -->
-      <% if Imageprofile.where(user_id: @user.id )[0] != nil && Imageprofile.where(user_id: @user.id )[0].profile_image != nil %>
-      <div class="profile-image-paperclip" data-toggle="modal" data-target="#myModal">
-        <%= image_tag @imageprofile.profile_image %>
-        <div class="profile-name">
-          <h2><%= @user.first_name %> <%= @user.last_name %></h2>
-        </div>
+      <div class="wall-picture-container">
+      <!-- Displays wall images depending if uploaded images or not -->
+            <% if Imageprofile.where(user_id: @user.id )[0] != nil && Imageprofile.where(user_id: @user.id )[0].wall_image != nil %>
+                <div class="wall-image-paperclip">
+                  <%= image_tag @imageprofile.wall_image %>
+                </div>
+            <% else %>
+                
+                <img src="/assets/image_profile.jpg" class="img-fluid" alt="Responsive image">
+                
+            <% end %>
       </div>
-      <% else %>
-      <p>
-        <img src=<%= @user.picture_url %> alt="" height="220" width="210" data-toggle="modal" data-target="#myModal">
-        <div class="profile-name">
-          <h2><%= @user.first_name %> <%= @user.last_name %></h2>
-        </div>
-      </p>
-      <% end %>
-    </div>
+      <div class="profile-pic-container">
+      <!-- Displays profile images depending if uploaded images or not -->
+          <% if Imageprofile.where(user_id: @user.id )[0] != nil && Imageprofile.where(user_id: @user.id )[0].profile_image != nil %>
+            <div class="profile-image-paperclip" data-toggle="modal" data-target="#myModal">
+              <%= image_tag @imageprofile.profile_image %>
+              <div class="profile-name">
+                <h2><%= @user.first_name %> <%= @user.last_name %></h2>
+              </div>
+            </div>
+          <% else %>
+            <p>
+              <img src=<%= @user.picture_url %> alt="" height="220" width="210" data-toggle="modal" data-target="#myModal">
+              <div class="profile-name">
+                <h2><%= @user.first_name %> <%= @user.last_name %></h2>
+              </div>
+            </p>
+          <% end %>
+      </div>
   </div>
 
   <div class="col-lg-12 information-profile-container">
